--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <section id="about" class="hero" style="padding-top:40px">
       <h2>About</h2>
-      <p style="color:var(--muted)">이곳의 모든 픽셀아트는 블록처럼 쌓인 기록 속에 남습니다.</p>
+      <p style="color:var(--muted)">이곳의 모든 픽셀아트는 하나의 블록처럼 시간 속에 기록됩니다.</p>
     </section>
 
     <section id="contact" class="hero" style="padding-top:20px">
@@ -148,7 +148,7 @@
       </p>
     </section>
 
-    <p class="footer">© <span id="y"></span> Dalbit • Run your art under the moon.</p>
+    <p class="footer">© <span id="y"></span> Dalbit • Pixel Art, Mined from Bitcoin.</p>
   </main>
 
   <script>
