--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           <span class="badge">▶ Watch on X</span>
         </a>
         <div class="meta">
-          <h3 class="title">SeedSigner — 🌽 Corn Screen</h3>
-          <p class="desc">화면에 옥수수 아이콘이 깜빡이는 시드사이너. ‘CORN GANG’ 가입 기념.</p>
+          <h3 class="title">Sign of Corn 🌽</h3>
+          <p class="desc">시드사이너 화면에 깜빡이는 옥수수, 'CORN GANG'의 신호.</p>
           <div class="row">
             <span class="tiny"><span class="dot"></span>2025-10-23</span>
           </div>
