--- a/index.html
+++ b/index.html
@@ -135,6 +135,29 @@
       </article>
     </section>
 
+    <!-- 카드 2: Popcorn Machine -->
+<article class="card">
+  <a href="https://x.com/gxrxxxng/status/1982032167409729581?s=46" 
+     target="_blank" rel="noopener" 
+     aria-label="Popcorn Machine — X에서 보기" 
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251025 popcorn-thumb.png" 
+         alt="Popcorn Machine pixel art (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Pop your corn</h3>
+    <p class="desc">옥수수가 번개를 맞아 터지는 순간.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-10-25</span>
+      <a class="tiny inline" 
+         href="https://github.com/gxrxxxng/dalbit.me/commits/main" 
+         target="_blank" rel="noopener">Proof</a>
+    </div>
+  </div>
+</article>
+
     <section id="about" class="hero" style="padding-top:40px">
       <h2>About</h2>
       <p style="color:var(--muted)">이곳의 모든 픽셀아트는 하나의 블록처럼 시간 속에 기록됩니다.</p>
