--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dalbit Pixel Gallery — Bitcoin-Inspired Pixel Art</title>
-  <meta name="description" content="비트코인과 라이트닝에서 영감받은 픽셀아트 컬렉션." />
+  <meta name="description" content="픽셀아트 컬렉션." />
   <meta property="og:title" content="Dalbit Pixel Gallery" />
-  <meta property="og:description" content="비트코인 × 픽셀아트 컬렉션" />
+  <meta property="og:description" content="픽셀아트 컬렉션" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://dalbit.me/" />
 
@@ -75,7 +75,7 @@
       border:1px solid var(--ring); border-radius:var(--radius); overflow:hidden;
       box-shadow:var(--shadow); transition:transform .18s ease, box-shadow .18s ease, border-color .18s ease; position:relative;}
     .card:hover{transform:translateY(-3px); border-color:#5e56a2}
-    .thumb{display:block; width:100%; aspect-ratio:1/1; object-fit:cover; background:#0b0914;}
+    .thumb{display:block; width:85%; margin:0 auto; aspect-ratio:1/1; object-fit:cover; background:#0b0914; border-radius:12px;}
     .meta{padding:14px}
     .title{margin:0 0 6px; font-weight:700}
     .desc{margin:0 0 10px; color:var(--muted); font-size:14px}
@@ -107,7 +107,7 @@
   <main class="wrap">
     <section class="hero">
       <h1>Dalbit Pixel Gallery</h1>
-      <p>비트코인 × 라이트닝 픽셀아트 모음. 빛나는 작은 사토시들을 기록합니다.</p>
+      <p>가령의 픽셀아트 모음.</p>
 
       <div class="toolbar">
         <a class="btn btn-accent" href="lightning:garyeong@strike.me" id="tip">⚡ Lightning Tip</a>
@@ -117,9 +117,33 @@
     </section>
 
     <section id="gallery" class="grid">
+      <!-- 카드 1: Pop your corn (맨 위로 이동) -->
+      <article class="card">
+        <a href="https://x.com/gxrxxxng/status/1982032167409729581?s=46" 
+           target="_blank" rel="noopener" 
+           aria-label="Pop your corn — X에서 보기" 
+           style="position:relative; display:block;">
+          <img class="thumb" src="assets/images/251025 popcorn-thumb.png" 
+               alt="Pop your corn pixel art (X에서 보기)" />
+          <span class="badge">▶ Watch on X</span>
+        </a>
+
+        <div class="meta">
+          <h3 class="title">Pop your corn ⚡ </h3>
+          <p class="desc">옥수수가 번개를 맞아 터지는 순간.</p>
+          <div class="row">
+            <span class="tiny"><span class="dot"></span>2025-10-25</span>
+            <a class="tiny inline" 
+               href="https://github.com/gxrxxxng/dalbit.me/commits/main" 
+               target="_blank" rel="noopener">Proof</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- 카드 2: Sign of Corn -->
       <article class="card">
         <a href="https://x.com/gxrxxxng/status/1981310401754386533" target="_blank" rel="noopener"
-           aria-label="SeedSigner Corn Screen — X에서 보기" style="position:relative; display:block;">
+           aria-label="Sign of Corn — X에서 보기" style="position:relative; display:block;">
           <img class="thumb"
                src="assets/images/corn-thumb.png?v=4"
                alt="SeedSigner corn screen, pixel style (워터마크 썸네일)" />
@@ -134,29 +158,6 @@
         </div>
       </article>
     </section>
-
-    <!-- 카드 2: Popcorn Machine -->
-<article class="card">
-  <a href="https://x.com/gxrxxxng/status/1982032167409729581?s=46" 
-     target="_blank" rel="noopener" 
-     aria-label="Popcorn Machine — X에서 보기" 
-     style="position:relative; display:block;">
-    <img class="thumb" src="assets/images/251025 popcorn-thumb.png" 
-         alt="Popcorn Machine pixel art (X에서 보기)" />
-    <span class="badge">▶ Watch on X</span>
-  </a>
-
-  <div class="meta">
-    <h3 class="title">Pop your corn</h3>
-    <p class="desc">옥수수가 번개를 맞아 터지는 순간.</p>
-    <div class="row">
-      <span class="tiny"><span class="dot"></span>2025-10-25</span>
-      <a class="tiny inline" 
-         href="https://github.com/gxrxxxng/dalbit.me/commits/main" 
-         target="_blank" rel="noopener">Proof</a>
-    </div>
-  </div>
-</article>
 
     <section id="about" class="hero" style="padding-top:40px">
       <h2>About</h2>
