--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dalbit Pixel Gallery — Bitcoin-Inspired Pixel Art</title>
-  <meta name="description" content="픽셀아트 컬렉션." />
+  <meta name="description" content="가령의 픽셀아트 컬렉션" />
   <meta property="og:title" content="Dalbit Pixel Gallery" />
-  <meta property="og:description" content="픽셀아트 컬렉션" />
+  <meta property="og:description" content="가령의 픽셀아트 컬렉션" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://dalbit.me/" />
 
@@ -107,7 +107,7 @@
   <main class="wrap">
     <section class="hero">
       <h1>Dalbit Pixel Gallery</h1>
-      <p>가령의 픽셀아트 모음.</p>
+      <p>가령의 픽셀아트 모음</p>
 
       <div class="toolbar">
         <a class="btn btn-accent" href="lightning:garyeong@strike.me" id="tip">⚡ Lightning Tip</a>
@@ -133,9 +133,6 @@
           <p class="desc">옥수수가 번개를 맞아 터지는 순간.</p>
           <div class="row">
             <span class="tiny"><span class="dot"></span>2025-10-25</span>
-            <a class="tiny inline" 
-               href="https://github.com/gxrxxxng/dalbit.me/commits/main" 
-               target="_blank" rel="noopener">Proof</a>
           </div>
         </div>
       </article>
@@ -161,7 +158,7 @@
 
     <section id="about" class="hero" style="padding-top:40px">
       <h2>About</h2>
-      <p style="color:var(--muted)">이곳의 모든 픽셀아트는 하나의 블록처럼 시간 속에 기록됩니다.</p>
+      <p style="color:var(--muted)">픽셀로 그린 순간의 흔적들을 남깁니다.</p>
     </section>
 
     <section id="contact" class="hero" style="padding-top:20px">
@@ -172,7 +169,7 @@
       </p>
     </section>
 
-    <p class="footer">© <span id="y"></span> Dalbit • Pixel Art, Mined from Bitcoin.</p>
+    <p class="footer">© <span id="y"></span> Dalbit • Crafted in pixels.</p>
   </main>
 
   <script>
