--- a/index.html
+++ b/index.html
@@ -113,20 +113,25 @@
     </section>
 
     <section id="gallery" class="grid">
-      <!-- NEW 작품 -->
-      <article class="card">
-        <a href="#" style="position:relative; display:block;">
-          <img class="thumb" src="assets/images/251027bitcoincenter-thumb.png" alt="At the Bitcoin Center" />
-          <span class="badge-new">NEW</span>
-        </a>
-        <div class="meta">
-          <h3 class="title">At the Bitcoin Center 🧭</h3>
-          <p class="desc">커피와 쿠키, 오렌지 알약을 드세요.</p>
-          <div class="row">
-            <span class="tiny"><span class="dot"></span>2025-10-27</span>
-          </div>
-        </div>
-      </article>
+    <!-- NEW 작품 (At the Bitcoin Center) -->
+<article class="card">
+  <a href="https://x.com/gxrxxxng/status/1982756745719263315?s=46"
+     target="_blank" rel="noopener"
+     aria-label="At the Bitcoin Center — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251027bitcoincenter-thumb.png" alt="At the Bitcoin Center" />
+    <span class="badge-new">NEW</span>
+    <span class="badge">▶ Watch on X</span>
+  </a>
+  <div class="meta">
+    <h3 class="title">At the Bitcoin Center 🧭</h3>
+    <p class="desc">커피와 쿠키, 오렌지 알약을 드세요.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-10-27</span>
+    </div>
+  </div>
+</article>
+
 
       <!-- Pop your corn -->
       <article class="card">
