--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <section id="about" class="hero" style="padding-top:40px">
       <h2>About</h2>
-      <p style="color:var(--muted)">픽셀로 그린 순간의 흔적들을 남깁니다.</p>
+      <p style="color:var(--muted)">빛이 머문 순간들을 픽셀로 기록합니다.</p>
     </section>
 
     <section id="contact" class="hero" style="padding-top:20px">
