--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
     *{box-sizing:border-box}
     html,body{height:100%}
     html { font-size:16px; line-height:1.6; }
-
     body{
       margin:0; color:var(--text);
       font-family:'Galmuri9', ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Apple SD Gothic Neo", "Noto Sans KR", Helvetica, Arial;
@@ -42,10 +41,9 @@
       background:linear-gradient(to bottom, rgba(15,12,26,.85), rgba(15,12,26,.35));
       border-bottom:1px solid var(--ring);
     }
-
     .wrap{max-width:var(--max); margin:0 auto; padding:18px}
     .row{display:flex; align-items:center; justify-content:space-between; gap:14px}
-    .brand{display:flex; align-items:center; gap:10px; font-weight:700;}
+    .brand{display:flex; align-items:center; gap:10px; font-weight:700; letter-spacing:.2px}
     .moon{width:18px; height:18px; border-radius:50%;
       background: radial-gradient(circle at 30% 30%, #fff6cf 0%, #ffe89a 45%, #ffda6b 60%, #d9b454 100%);
       box-shadow:0 0 18px rgba(255,220,112,.55), 0 0 40px rgba(255,200,85,.2);}
@@ -56,32 +54,56 @@
     .hero h1{margin:8px 0 6px; font-size:42px;}
     .hero p{margin:0; color:var(--muted)}
 
+    .toolbar{display:flex; gap:10px; flex-wrap:wrap; margin:18px 0 8px;}
+    .btn{appearance:none; border:1px solid var(--ring); color:var(--text);
+      background:linear-gradient(180deg,#221a3f,#1a1530); padding:9px 14px; border-radius:12px; cursor:pointer; box-shadow:var(--shadow);}
+    .btn-accent{background:linear-gradient(180deg,#ffd66a,#ffb94f); color:#1a1306; border:none}
+
     .grid{display:grid; grid-template-columns:repeat(3,1fr); gap:var(--grid-gap);}
     @media (max-width:980px){ .grid{grid-template-columns:repeat(2,1fr)} }
     @media (max-width:620px){ .grid{grid-template-columns:1fr} .hero h1{font-size:32px} }
 
     .card{background:linear-gradient(180deg, var(--card), #120f22);
       border:1px solid var(--ring); border-radius:var(--radius); overflow:hidden;
-      box-shadow:var(--shadow); transition:transform .18s ease, border-color .18s ease; position:relative;}
-    .card:hover{transform:translateY(-3px); border-color:#5e56a2}
-
-    .thumb{display:block; width:85%; margin:0 auto; aspect-ratio:1/1; object-fit:cover;
-      background:#0b0914; border-radius:12px; image-rendering:pixelated;}
-
+      box-shadow:var(--shadow); position:relative;}
+    .thumb{display:block; width:85%; margin:0 auto; aspect-ratio:1/1; object-fit:cover; background:#0b0914; border-radius:12px;}
     .meta{padding:14px}
     .title{margin:0 0 6px; font-weight:700}
     .desc{margin:0 0 10px; color:var(--muted); font-size:14px}
-    .row{justify-content:space-between; display:flex; align-items:center}
     .tiny{font-size:12px; color:var(--muted)}
     .dot{width:6px; height:6px; border-radius:50%; background:var(--accent); display:inline-block; margin-right:6px;}
 
-    .badge, .badge-new, .badge-collect{
-      position:absolute; font-size:12px; padding:4px 8px; border-radius:999px;
-      border:1px solid rgba(255,255,255,.2);
+    /* 🎨 통일된 Galmuri 폰트 기반 배지 스타일 */
+    .badge, .badge-new, .badge-sold {
+      position: absolute;
+      font-family: 'Galmuri9';
+      font-size: 12px;
+      line-height: 1;
+      padding: 6px 11px;
+      border-radius: 999px;
+      letter-spacing: .3px;
+      display: inline-flex;
+      align-items: center;
+      gap: 5px;
+      user-select: none;
+      box-shadow: 0 3px 8px rgba(0,0,0,.25);
     }
-    .badge{right:10px; bottom:10px; background:rgba(0,0,0,.55); color:#fff;}
-    .badge-new{left:10px; top:10px; background:linear-gradient(180deg,#ffd66a,#ffb94f); color:#1a1306; border:1px solid rgba(0,0,0,.15);}
-    .badge-collect{left:10px; top:10px; background:linear-gradient(180deg,#ffd66a,#ffb94f); color:#1a1306; border:1px solid rgba(0,0,0,.15);}
+    .badge { right: 10px; bottom: 10px; background: rgba(0,0,0,.55); color:#fff; border:1px solid rgba(255,255,255,.25); }
+    .badge-new {
+      left:10px; top:10px;
+      background:linear-gradient(180deg,#ffe89a,#ffc64d);
+      color:#1a1306; border:1px solid rgba(0,0,0,.2);
+      text-shadow:0 1px 0 rgba(255,255,255,.4);
+    }
+    .badge-sold {
+      left:10px; top:10px;
+      background:linear-gradient(180deg,#2b2244,#1b142c);
+      color:#ffcc57; border:1px solid rgba(255,214,106,.4);
+      text-transform:uppercase; letter-spacing:.6px;
+      box-shadow:inset 0 0 6px rgba(255,204,87,.2),0 3px 10px rgba(0,0,0,.35);
+    }
+
+    .footer{margin:40px 0 80px; color:var(--muted); font-size:14px; text-align:center;}
   </style>
 </head>
 
@@ -95,7 +117,7 @@
         <a href="#gallery">Gallery</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
-        <a href="https://x.com/gxrxxxng?s=21" target="_blank" rel="noopener">X</a>
+        <a href="https://x.com/gxrxxxng?s=21" target="_blank">X</a>
       </nav>
     </div>
   </header>
@@ -104,63 +126,52 @@
     <section class="hero">
       <h1>Dalbit Pixel Gallery</h1>
       <p>가령의 픽셀아트 모음</p>
-
       <div class="toolbar">
-        <a class="btn btn-accent" href="lightning:garyeong@strike.me" id="tip">⚡ Lightning Tip</a>
+        <a class="btn btn-accent" href="lightning:garyeong@strike.me">⚡ Lightning Tip</a>
         <button class="btn" id="copyLn">Copy Lightning Address</button>
         <a class="btn" href="#about">About this Collection</a>
       </div>
     </section>
 
     <section id="gallery" class="grid">
-    <!-- NEW 작품 (At the Bitcoin Center) -->
-<article class="card">
-  <a href="https://x.com/gxrxxxng/status/1982756745719263315?s=46"
-     target="_blank" rel="noopener"
-     aria-label="At the Bitcoin Center — X에서 보기"
-     style="position:relative; display:block;">
-    <img class="thumb" src="assets/images/251027bitcoincenter-thumb.png" alt="At the Bitcoin Center" />
-    <span class="badge-new">NEW</span>
-    <span class="badge">▶ Watch on X</span>
-  </a>
-  <div class="meta">
-    <h3 class="title">At the Bitcoin Center 🧭</h3>
-    <p class="desc">커피와 쿠키, 오렌지 알약을 드세요.</p>
-    <div class="row">
-      <span class="tiny"><span class="dot"></span>2025-10-27</span>
-    </div>
-  </div>
-</article>
-
-
-      <!-- Pop your corn -->
+      <!-- 카드 1: At the Bitcoin Center -->
       <article class="card">
-        <a href="https://x.com/gxrxxxng/status/1982032167409729581?s=46" target="_blank" rel="noopener" style="position:relative; display:block;">
+        <span class="badge-new">NEW ✦</span>
+        <a href="https://x.com/gxrxxxng/status/1982756745719263315?s=46" target="_blank">
+          <img class="thumb" src="assets/images/251027bitcoincenter-thumb.png" alt="At the Bitcoin Center pixel art" />
+          <span class="badge">▶ Watch on X</span>
+        </a>
+        <div class="meta">
+          <h3 class="title">At the Bitcoin Center 🧭</h3>
+          <p class="desc">커피와 쿠키, 오렌지 알약을 먹는 곳.</p>
+          <span class="tiny"><span class="dot"></span>2025-10-27</span>
+        </div>
+      </article>
+
+      <!-- 카드 2: Pop your corn -->
+      <article class="card">
+        <a href="https://x.com/gxrxxxng/status/1982032167409729581?s=46" target="_blank">
           <img class="thumb" src="assets/images/251025 popcorn-thumb.png" alt="Pop your corn pixel art" />
           <span class="badge">▶ Watch on X</span>
         </a>
         <div class="meta">
           <h3 class="title">Pop your corn ⚡</h3>
           <p class="desc">옥수수가 번개를 맞아 터지는 순간.</p>
-          <div class="row">
-            <span class="tiny"><span class="dot"></span>2025-10-25</span>
-          </div>
+          <span class="tiny"><span class="dot"></span>2025-10-25</span>
         </div>
       </article>
 
-      <!-- Sign of Corn (Sold Out) -->
+      <!-- 카드 3: Sign of Corn -->
       <article class="card">
-        <a href="https://x.com/gxrxxxng/status/1981310401754386533" target="_blank" rel="noopener" style="position:relative; display:block;">
-          <img class="thumb" src="assets/images/corn-thumb.png?v=4" alt="Sign of Corn pixel art" />
-          <span class="badge-collect">Sold Out ⚡</span>
+        <span class="badge-sold">SOLD OUT ⚡</span>
+        <a href="https://x.com/gxrxxxng/status/1981310401754386533" target="_blank">
+          <img class="thumb" src="assets/images/corn-thumb.png?v=4" alt="SeedSigner corn screen pixel art" />
           <span class="badge">▶ Watch on X</span>
         </a>
         <div class="meta">
           <h3 class="title">Sign of Corn 🌽</h3>
           <p class="desc">시드사이너 화면에 깜빡이는 옥수수, 'CORN GANG'의 신호.</p>
-          <div class="row">
-            <span class="tiny"><span class="dot"></span>2025-10-23</span>
-          </div>
+          <span class="tiny"><span class="dot"></span>2025-10-23</span>
         </div>
       </article>
     </section>
@@ -173,8 +184,7 @@
     <section id="contact" class="hero" style="padding-top:20px">
       <h2>Contact</h2>
       <p class="tiny">
-        X: <a class="inline" href="https://x.com/gxrxxxng?s=21" target="_blank" rel="noopener">@gxrxxxng</a>
-        · Lightning: <span id="lnaddr" class="kbd">garyeong@strike.me</span>
+        X: <a class="inline" href="https://x.com/gxrxxxng?s=21" target="_blank">@gxrxxxng</a> · Lightning: <span id="lnaddr" class="kbd">garyeong@strike.me</span>
       </p>
     </section>
 
@@ -183,18 +193,6 @@
 
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
-    const addr = document.getElementById('lnaddr')?.textContent.trim();
-    const $btn = document.getElementById('copyLn');
-    if($btn && addr){
-      $btn.addEventListener('click', async () => {
-        try{
-          await navigator.clipboard.writeText(addr);
-          const old = $btn.textContent;
-          $btn.textContent = 'Copied!';
-          setTimeout(()=>{$btn.textContent = old;}, 1500);
-        }catch(e){ alert('복사 실패. 수동으로 복사해주세요: ' + addr); }
-      });
-    }
   </script>
 </body>
 </html>
