--- a/index.html
+++ b/index.html
@@ -134,6 +134,27 @@
     </section>
 
     <section id="gallery" class="grid">
+<!-- 카드 1: Full Node (New) -->
+<article class="card">
+  <a href="https://x.com/gxrxxxng/status/1983150500251087206?s=46"
+     target="_blank" rel="noopener"
+     aria-label="Full Node — X에서 보기"
+     style="position:relative; display:block;">
+    <img class="thumb" src="assets/images/251028-fullnode.png"
+         alt="Full Node pixel art (X에서 보기)" />
+    <span class="badge">▶ Watch on X</span>
+  </a>
+
+  <div class="meta">
+    <h3 class="title">Bitcoin Node 🌐</h3>
+    <p class="desc">수많은 연결 속, 빛으로 존재하는 노드.</p>
+    <div class="row">
+      <span class="tiny"><span class="dot"></span>2025-10-28</span>
+    </div>
+  </div>
+</article>
+
+      
       <!-- 카드 1: At the Bitcoin Center -->
       <article class="card">
         <span class="badge-new">NEW ✦</span>
